[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1.0.82"
httpc-test = "0.1.9"