[package]
name = "sui-connect"
version = "0.1.0"
edition = "2021"


[dependencies]
cargo-dev = "0.0.2"
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
futures = "0.3.30"
tracing = "0.1.40"
reqwest = "0.12.4"
serde_json = "1.0.117"
serde = "1.0.203"
bcs = "0.1.6"
